<?php
/**
 * Created by PhpStorm.
 * User: delta
 * Date: 18-11-22
 * Time: 上午12:28
 */

namespace SE\SEQuery;


class SEQuery extends SEQueryAbstract {

}